--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ html {
 
 }
 
-#para1, #para2, #para3, #para4 {
+#para1, #para2, #para3 {
   width: 100%;
   height: 200px;
 }
@@ -27,4 +27,6 @@ html {
 img {
   padding: 10px;
 }
+
+
 
